// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskForm TaskForm renders correctly with failed state 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center items-center z-10 fixed h-full w-full overflow-hidden bg-black/[.5]"
  >
    <div
      class="flex flex-col flex-nowrap w-5/6 h-5/6 bg-white bg-gray-300 rounded-md retina:rounded-3xl"
    >
      <div
        class="text-center text-3xl m-1 text-red-500"
      >
        Failed to save task. Check internet connection and try it again.
      </div>
      <select
        class="text-3xl retina:text-8xl m-1 retina:m-3"
        name="status"
      >
        <option
          value="0"
        >
          New
        </option>
        <option
          value="1"
        >
          Active
        </option>
        <option
          value="2"
        >
          Completed
        </option>
      </select>
      <textarea
        class="h-24 retina:h-64 border-solid border-2 retina:border-4 border-yellow-200 rounded retina:rounded-2xl m-1 retina:m-3 p-1 retina:p-3 retina:text-6xl"
        name="title"
      >
        Task 1
      </textarea>
      <textarea
        class="h-full border-solid border-2 retina:border-4 border-yellow-200 rounded retina:rounded-2xl m-1 retina:m-3 p-1 retina:p-3 retina:text-6xl"
        name="description"
      >
        Task 1 description
      </textarea>
      <div
        class="flex justify-center my-5 retina:my-5 mx-3 retina:mx-8 space-x-7"
      >
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-green-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Save
        </button>
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-yellow-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Cancel
        </button>
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-red-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TaskForm TaskForm renders correctly with idle state 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center items-center z-10 fixed h-full w-full overflow-hidden bg-black/[.5]"
  >
    <div
      class="flex flex-col flex-nowrap w-5/6 h-5/6 bg-white bg-gray-300 rounded-md retina:rounded-3xl"
    >
      <select
        class="text-3xl retina:text-8xl m-1 retina:m-3"
        name="status"
      >
        <option
          value="0"
        >
          New
        </option>
        <option
          value="1"
        >
          Active
        </option>
        <option
          value="2"
        >
          Completed
        </option>
      </select>
      <textarea
        class="h-24 retina:h-64 border-solid border-2 retina:border-4 border-yellow-200 rounded retina:rounded-2xl m-1 retina:m-3 p-1 retina:p-3 retina:text-6xl"
        name="title"
      >
        Task 1
      </textarea>
      <textarea
        class="h-full border-solid border-2 retina:border-4 border-yellow-200 rounded retina:rounded-2xl m-1 retina:m-3 p-1 retina:p-3 retina:text-6xl"
        name="description"
      >
        Task 1 description
      </textarea>
      <div
        class="flex justify-center my-5 retina:my-5 mx-3 retina:mx-8 space-x-7"
      >
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-green-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Save
        </button>
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-yellow-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Cancel
        </button>
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-red-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TaskForm TaskForm renders correctly with loading state 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center items-center z-10 fixed h-full w-full overflow-hidden bg-black/[.5]"
  >
    <div
      class="flex justify-center items-center z-50 fixed h-full w-full overflow-hidden bg-black/[.5]"
    >
      <div
        role="status"
      >
        <svg
          aria-hidden="true"
          class="w-24 retina:w-56 h-24 retina:h-60 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
          fill="none"
          viewBox="0 0 100 101"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
            fill="currentColor"
          />
          <path
            d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
            fill="currentFill"
          />
        </svg>
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
    <div
      class="flex flex-col flex-nowrap w-5/6 h-5/6 bg-white bg-gray-300 rounded-md retina:rounded-3xl"
    >
      <select
        class="text-3xl retina:text-8xl m-1 retina:m-3"
        name="status"
      >
        <option
          value="0"
        >
          New
        </option>
        <option
          value="1"
        >
          Active
        </option>
        <option
          value="2"
        >
          Completed
        </option>
      </select>
      <textarea
        class="h-24 retina:h-64 border-solid border-2 retina:border-4 border-yellow-200 rounded retina:rounded-2xl m-1 retina:m-3 p-1 retina:p-3 retina:text-6xl"
        name="title"
      >
        Task 1
      </textarea>
      <textarea
        class="h-full border-solid border-2 retina:border-4 border-yellow-200 rounded retina:rounded-2xl m-1 retina:m-3 p-1 retina:p-3 retina:text-6xl"
        name="description"
      >
        Task 1 description
      </textarea>
      <div
        class="flex justify-center my-5 retina:my-5 mx-3 retina:mx-8 space-x-7"
      >
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-green-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Save
        </button>
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-yellow-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Cancel
        </button>
        <button
          class="size-20 retina:size-60 p-1 retina:p-3 bg-red-300 rounded-md retina:rounded-3xl retina:text-6xl"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
